# climate-forecast

./: README.md  docker-compose.yml
climate_analysis/: CMakeLists.txt  Dockerfile
climate_analysis/docs/: CMakeLists.txt
climate_analysis/lib/: CMakeLists.txt
climate_analysis/lib/climate_data/: CMakeLists.txt
climate_analysis/lib/climate_data/include/: climate_data.hpp  climate_types.hpp  climate_url.hpp  json_parser.hpp
climate_analysis/lib/climate_data/src/: climate_data.cpp  climate_url.cpp  json_parser.cpp
climate_analysis/lib/climate_data/test/: climate_data_test.cpp  climate_url_test.cpp  json_parser_test.cpp  json_test_data.hpp
climate_analysis/lib/curl_handler/include/: curl_handler.hpp  http_handler.hpp
climate_analysis/lib/curl_handler/src/: curl_handler.cpp
climate_analysis/lib/curl_handler/test/: curl_handler_test.cpp  mock_http_handler.hpp
climate_analysis/src/: climate_analysis.cpp
